--- a/index.html
+++ b/index.html
@@ -56,8 +56,12 @@
         <section class="description">
             <h2>About This Simulator</h2>
             <p>
-                This interactive tool uses Jones Calculus to simulate light polarization. Build an optical path with elements like polarizers, waveplates, and mirrors. Adjust parameters and visualize the results in real-time through a data table, an intensity plot, and an interactive 3D view where you can drag and rotate elements. Ideal for learning about polarization phenomena.</p>
-            <p>
+                This interactive tool uses Jones Calculus to simulate light polarization. Build an optical path with elements like polarizers, waveplates, and mirrors.</p>
+                <p>
+                The Jones matrices for many of these are based on standard definitions (sourced primarily from <a href="https://en.wikipedia.org/wiki/Jones_calculus" target="_blank">Wikipedia</a>). The simulation employs the phase convention <code>φ = kz - ωt</code>. </p>
+                <p>
+                Adjust parameters and visualize the results in real-time through a data table, an intensity plot, and an interactive 3D view where you can drag and rotate elements. Ideal for learning about polarization phenomena.
+            </p>
                 Please note: This simulator is currently in beta. We appreciate your feedback! If you encounter any issues or have suggestions for improvement, please report them on our <a href="https://github.com/physicify-simulab/Polarization/issues" target="_blank" rel="noopener noreferrer">GitHub Issues page</a>.
             </p>
              <p>
