--- a/polarization.html
+++ b/polarization.html
@@ -25,14 +25,23 @@
     <!-- Dynamic Header Include -->
     <div id="header-placeholder"></div>
 
-    <!-- H1 Tag remains the same with the added structure -->
+    <!-- Modified H1 -->
     <h1>
-      <span class="h1-title">Jones Calculus Polarization Simulation</span>
+      <!-- Wrapper for title and copyright -->
+      <div class="h1-title-group">
+        <span class="h1-title">Jones Calculus Polarization Simulation</span>
+        <!-- ADDED COPYRIGHT ELEMENT -->
+        <div class="h1-copyright">
+          © 2025 <a href="https://github.com/physicify-simulab" target="_blank" title="Visit Physicify SimuLab on GitHub">Physicify SimuLab</a>
+        </div>
+        <!-- END ADDED COPYRIGHT ELEMENT -->
+      </div>
+      <!-- Updated h1-info structure -->
       <div class="h1-info">
         <div class="info-item">
           <span class="info-label">About and discussion</span>
           <div class="info-content">
-            <a href="https://physicify-simulab.github.io/Polarization/" target="_blank" title="About and Discussion">
+            <a href="index.html" target="_blank" title="About and Discussion">
                <i class="fa-solid fa-file-invoice"></i>
             </a>
           </div>
@@ -57,6 +66,7 @@
             <a href="" target="_blank">none</a>
           </div>
         </div>
+        <!-- REMOVED COPYRIGHT ITEM FROM HERE -->
       </div>
     </h1>
 
@@ -130,7 +140,7 @@
     </div>
 
     <script src="script.js"></script>
-    <script src="interactiveCanvas.js"></script> <!-- Assuming this exists for polarization? If not, remove. -->
+    <script src="interactiveCanvas.js"></script>
 
      <!-- Dynamic Footer Include -->
      <div id="footer-placeholder"></div>
