--- a/polarization.html
+++ b/polarization.html
@@ -41,7 +41,7 @@
         <div class="info-item">
           <span class="info-label">About and discussion</span>
           <div class="info-content">
-            <a href="index.html" target="_blank" title="About and Discussion">
+            <a href="." target="_blank" title="About and Discussion">
                <i class="fa-solid fa-file-invoice"></i>
             </a>
           </div>
