--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Polarization 3D Simulator - Introduction</title>
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/physicify-simulab/homepage/refs/heads/main/favicon.png">
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/physicify-simulab/physicify-simulab.github.io/refs/heads/main/favicon.png">
 
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="intro_style.css">
 
     <!-- Shared Header & Footer Styles -->
-    <link rel="stylesheet" href="https://physicify-simulab.github.io/homepage/header.css">
-    <link rel="stylesheet" href="https://physicify-simulab.github.io/homepage/footer.css">
+    <link rel="stylesheet" href="https://physicify-simulab.github.io/header.css">
+    <link rel="stylesheet" href="https://physicify-simulab.github.io/footer.css">
 </head>
 <body>
 
@@ -106,8 +106,8 @@
             })
             .catch(error => console.error('Error loading ' + filePath, error));
         }
-        includeHTML('header-placeholder', 'https://physicify-simulab.github.io/homepage/header.html');
-        includeHTML('footer-placeholder', 'https://physicify-simulab.github.io/homepage/footer.html');
+        includeHTML('header-placeholder', 'https://physicify-simulab.github.io/header.html');
+        includeHTML('footer-placeholder', 'https://physicify-simulab.github.io/footer.html');
       </script>
 </body>
 </html>
