--- a/polarization.html
+++ b/polarization.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jones Calculus Polarization Simulation</title>
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/physicify-simulab/homepage/refs/heads/main/favicon.png">
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/physicify-simulab/physicify-simulab.github.io/refs/heads/main/favicon.png">
   <!-- Font Awesome CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
     <!-- Link to the updated external style sheet -->
     <link rel="stylesheet" href="style.css">
     <!-- Header & Footer Styles -->
-  <link rel="stylesheet" href="https://physicify-simulab.github.io/homepage/header.css">
-  <link rel="stylesheet" href="https://physicify-simulab.github.io/homepage/footer.css">
+  <link rel="stylesheet" href="https://physicify-simulab.github.io/header.css">
+  <link rel="stylesheet" href="https://physicify-simulab.github.io/footer.css">
 
     <!-- Library Includes -->
     <script src="complex.min.js"></script>
@@ -160,8 +160,8 @@
             })
             .catch(error => console.error('Error loading ' + filePath + ':', error));
         }
-        includeHTML('header-placeholder', 'https://physicify-simulab.github.io/homepage/header.html');
-        includeHTML('footer-placeholder', 'https://physicify-simulab.github.io/homepage/footer.html');
+        includeHTML('header-placeholder', 'https://physicify-simulab.github.io/header.html');
+        includeHTML('footer-placeholder', 'https://physicify-simulab.github.io/footer.html');
     </script>
 
 </body>
