fixed headers and footers

--- a/polarization.html
+++ b/polarization.html
@@ -10,8 +10,8 @@
     <!-- Link to the updated external style sheet -->
     <link rel="stylesheet" href="style.css">
     <!-- Header & Footer Styles -->
-  <link rel="stylesheet" href="https://physicify-simulab.github.io/header.css">
-  <link rel="stylesheet" href="https://physicify-simulab.github.io/footer.css">
+  <link rel="stylesheet" href="/header.css">
+  <link rel="stylesheet" href="/footer.css">
 
     <!-- Library Includes -->
     <script src="complex.min.js"></script>
@@ -181,8 +181,8 @@
             })
             .catch(error => console.error('Error loading ' + filePath + ':', error));
         }
-        includeHTML('header-placeholder', 'https://physicify-simulab.github.io/header.html');
-        includeHTML('footer-placeholder', 'https://physicify-simulab.github.io/footer.html');
+        includeHTML('header-placeholder', '/header.html');
+        includeHTML('footer-placeholder', '/footer.html');
     </script>
 
 </body>
