--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Polarization 3D Simulator - Introduction</title>
+    <title>Light Polarization 3D Simulator - Introduction</title>
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/physicify-simulab/physicify-simulab.github.io/refs/heads/main/favicon.png">
 
     <!-- Font Awesome CDN -->
@@ -24,7 +24,7 @@
     <!-- Main Introduction Content -->
     <main class="intro-container">
 
-        <h1>Welcome to the Polarization 3D Simulator</h1>
+        <h1>Welcome to the Light Polarization 3D Simulator</h1>
 
         <!-- Simulator Preview with Play Button -->
         <div class="simulator-preview">
@@ -62,7 +62,7 @@
                 <p>
                 Adjust parameters and visualize the results in real-time through a data table, an intensity plot, and an interactive 3D view where you can drag and rotate elements. Ideal for learning about polarization phenomena.
             </p>
-                Please note: This simulator is currently in beta. We appreciate your feedback! If you encounter any issues or have suggestions for improvement, please report them on our <a href="https://github.com/physicify-simulab/Polarization/issues" target="_blank" rel="noopener noreferrer">GitHub Issues page</a>.
+                We appreciate your feedback! If you encounter any issues or have suggestions for improvement, please report them on our <a href="https://github.com/physicify-simulab/Polarization/issues" target="_blank" rel="noopener noreferrer">GitHub Issues page</a>.
             </p>
              <p>
                 Click the play button above to launch the simulator!
