--- a/polarization.html
+++ b/polarization.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jones Calculus Polarization Simulation</title>
+    <title>Light Polarization Simulation in 3D</title>
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/physicify-simulab/physicify-simulab.github.io/refs/heads/main/favicon.png">
   <!-- Font Awesome CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
@@ -28,7 +28,7 @@
     <h1>
       <!-- Wrapper for title and copyright -->
       <div class="h1-title-group">
-        <span class="h1-title">Jones Calculus Polarization Simulation</span>
+        <span class="h1-title">Light Polarization Simulation in 3D</span>
         <!-- ADDED COPYRIGHT ELEMENT -->
         <div class="h1-copyright">
           © 2025 <a href="https://github.com/physicify-simulab" target="_blank" title="Visit Physicify SimuLab on GitHub">Physicify SimuLab</a>
@@ -145,7 +145,7 @@
                    <i class="fa-solid fa-play"></i> Play
                </button>
                <span style="margin-left: 15px;">Show:</span>
-               <input type="checkbox" id="show-labels-checkbox">
+               <input type="checkbox" id="show-labels-checkbox" checked>
                <label for="show-labels-checkbox">Labels</label>
                <input type="checkbox" id="show-efield-checkbox" checked>
                <label for="show-efield-checkbox">E-Field</label>
