rebranding to VisuPhy

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Light Polarization 3D Simulator - Introduction</title>
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/physicify-simulab/physicify-simulab.github.io/refs/heads/main/favicon.png">
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/visuphy/visuphy.github.io/refs/heads/main/favicon.png">
 
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
@@ -44,7 +44,7 @@
                 </span>
                 <span class="info-separator">|</span>
                 <span class="source-info">
-                    Source Code: <a href="https://github.com/physicify-simulab/Polarization" target="_blank">
+                    Source Code: <a href="https://github.com/visuphy/Polarization" target="_blank">
                         <i class="fab fa-github"></i> GitHub Repository
                     </a>
                 </span>
@@ -62,7 +62,7 @@
                 <p>
                 Adjust parameters and visualize the results in real-time through a data table, an intensity plot, and an interactive 3D view where you can drag and rotate elements. Ideal for learning about polarization phenomena.
             </p>
-                We appreciate your feedback! If you encounter any issues or have suggestions for improvement, please report them on our <a href="https://github.com/physicify-simulab/Polarization/issues" target="_blank" rel="noopener noreferrer">GitHub Issues page</a>.
+                We appreciate your feedback! If you encounter any issues or have suggestions for improvement, please report them on our <a href="https://github.com/visuphy/Polarization/issues" target="_blank" rel="noopener noreferrer">GitHub Issues page</a>.
             </p>
              <p>
                 Click the play button above to launch the simulator!
@@ -73,7 +73,7 @@
         <section class="comments-section">
             <h2>Comments & Feedback</h2>
             <script src="https://giscus.app/client.js"
-        data-repo="physicify-simulab/Polarization"
+        data-repo="visuphy/Polarization"
         data-repo-id="R_kgDOOcwQPg"
         data-category="Comments"
         data-category-id="DIC_kwDOOcwQPs4CpSXS"
