--- a/polarization.html
+++ b/polarization.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Light Polarization Simulation in 3D</title>
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/physicify-simulab/physicify-simulab.github.io/refs/heads/main/favicon.png">
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/visuphy/visuphy.github.io/refs/heads/main/favicon.png">
   <!-- Font Awesome CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
     <!-- Link to the updated external style sheet -->
@@ -31,7 +31,7 @@
         <span class="h1-title">Light Polarization Simulation in 3D</span>
         <!-- ADDED COPYRIGHT ELEMENT -->
         <div class="h1-copyright">
-          © 2025 <a href="https://github.com/physicify-simulab" target="_blank" title="Visit Physicify SimuLab on GitHub">Physicify SimuLab</a>
+          © 2025 <a href="https://github.com/visuphy" target="_blank" title="Visit VisuPhy on GitHub">VisuPhy</a>
         </div>
         <!-- END ADDED COPYRIGHT ELEMENT -->
       </div>
@@ -48,7 +48,7 @@
         <div class="info-item">
           <span class="info-label">Source</span>
           <div class="info-content">
-            <a href="https://github.com/physicify-simulab/Polarization" target="_blank" title="View Source on GitHub">
+            <a href="https://github.com/visuphy/Polarization" target="_blank" title="View Source on GitHub">
               <i class="fab fa-github"></i>
             </a>
           </div>
